--- a/public/layout/css/style.css
+++ b/public/layout/css/style.css
@@ -153,7 +153,14 @@ main section:nth-child(1) img {
 }
 /* Main Jumbo Tron End */
 
-
+/* promotion */
+.fa-promotion{
+    font-size: 3rem;
+    background-color: white;
+    border: 1px solid red;
+    border-radius: 50%;
+    padding: 1rem;
+}
 
 @media (min-width: 992px) {
     body {
@@ -202,5 +209,9 @@ main section:nth-child(1) img {
         position: absolute;
         top: 0;
         left: 0;
+    }
+
+    main {
+        padding-right: 4rem;
     }
 }
