--- a/public/layout/auth/css/style.css
+++ b/public/layout/auth/css/style.css
@@ -117,6 +117,19 @@ main .auth form .extra a {
     text-decoration: none;
 }
 
+main .auth form .switch {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+main .auth form .switch a {
+    color: black;
+    text-decoration: none;
+    margin: .5em 0;
+}
+
 /* main .auth form .extra div input {
     
 } */
