--- a/public/layout/css/style.css
+++ b/public/layout/css/style.css
@@ -1,9 +1,4 @@
 /* CSS Reset Start */
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -33,7 +28,6 @@ body {
 	line-height: 1;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
-    overflow: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -52,109 +46,339 @@ table {
 }
 /* CSS Reset End */
 
-/* Modal Start */
-.modal-mobile {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    z-index: 999;
-    display: none;
-    padding: 0 1em;
+@media only screen and (max-width: 600px) {
+
+    /* Modal Start */
+    .modal-mobile {
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        z-index: 999;
+        display: none;
+        padding: 0 1em;
+    }
+
+    .modal-active {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-mobile .modal-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        backdrop-filter: blur(5px);
+        border: 1px solid whitesmoke;
+        border-radius: 20px;
+        height: 50vh;
+        padding: 2em 0;
+    }
+
+    .modal-mobile .modal-menu a {
+        color: white;
+        border: 1px solid white;
+        margin: 1.5em;
+    }
+
+    .modal-mobile .modal-menu a:hover {
+        background-color: black;
+        color: white;
+        border: 1px solid white;
+    }
+    /* Modal End */
+
+    /* Nav Topbar Start */
+    nav.topbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        padding: 1em;
+        z-index: 1;
+    }
+
+    nav.topbar a img {
+        width: 10%;
+    }
+
+    nav.topbar a {
+        color: white;
+        text-decoration: none;
+    }
+    /* Nav Topbar End */
+
+    /* Nav Sidebar Start */
+    nav.sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: fixed;
+        right: 0;
+        height: 100vh;
+        width: 50vw;
+        padding-top: 10vh;
+        transform: translateX(100%);
+        transition: .5s;
+        overflow: scroll;
+    }
+
+    nav.slide {
+        transform: translateX(0);
+    }
+
+    nav.sidebar a {
+        font-size: 1rem;
+        text-decoration: none;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        transition: .5s;
+        width: 40vw;
+        padding: 10%;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+    }
+
+    nav.sidebar a:hover {
+        background-color: #3e3e3e;
+    }
+
+    nav.sidebar a:nth-child(1) {
+        display: none;
+    }
+    /* Nav Sidebar End */
+
+    footer {
+        display: none;
+    }   
+
 }
 
-.modal-active {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@media only screen and (min-width: 600px) {
+
+    /* Modal Start */
+    .modal-mobile {
+        position: fixed;
+        display: none;
+        width: 100vw;
+        height: 100vh;
+        z-index: 999;
+    }
+
+    .modal-active {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .modal-mobile .modal-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        backdrop-filter: blur(5px);
+        border: 1px solid whitesmoke;
+        border-radius: 20px;
+        height: 30vh;
+        padding: 0 5em;
+    }
+
+    .modal-mobile .modal-menu a {
+        font-size: 1.5rem;
+        color: white;
+        border: 1px solid white;
+        margin: .2em;
+    }
+
+    .modal-mobile .modal-menu a:hover {
+        background-color: black;
+        color: white;
+        border: 1px solid white;
+    }
+    /* Modal End */
+
+    /* Nav Topbar Start */
+    nav.topbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        width: 100vw;
+        padding: 1.5em;
+        z-index: 1;
+    }
+
+    nav.topbar a img {
+        width: 10%;
+    }
+
+    nav.topbar a {
+        color: white;
+        text-decoration: none;
+    }
+    /* Nav Topbar End */
+
+    /* Nav Sidebar Start */
+    nav.sidebar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: fixed;
+        right: 0;
+        height: 100vh;
+        width: 50vw;
+        padding-top: 15vh;
+        transform: translateX(100%);
+        transition: .5s;
+        overflow: scroll;
+    }
+
+    nav.slide {
+        transform: translateX(0);
+    }
+
+    nav.sidebar a {
+        font-size: 1.5rem;
+        text-decoration: none;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        transition: .5s;
+        width: 30vw;
+        padding: 8%;
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+    }
+
+    nav.sidebar a:hover {
+        background-color: #3e3e3e;
+    }
+
+    nav.sidebar a:nth-child(1) {
+        display: none;
+    }
+    /* Nav Sidebar End */
+
+    footer {
+        display: none;
+    }
 }
 
-.modal-mobile .modal-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    backdrop-filter: blur(5px);
-    border: 1px solid whitesmoke;
-    border-radius: 20px;
-    height: 50vh;
-    padding: 2em 0;
+@media only screen and (min-width: 992px) {
+
+    /* Modal Start */
+    .modal-mobile {
+        display: none;
+    }
+    /* Modal End */
+
+    /* Nav Topbar Start */
+    nav.topbar {
+        display: none;
+    }
+    /* Nav Topbar End */
+
+    /* Nav Sidebar Start */
+    nav.sidebar {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: auto;
+        padding: 1em;
+        width: 5vw;
+        height: 100vh;
+        transform: translateX(0);
+        transition: 1s;
+        overflow: hidden;
+    }
+
+    nav.sidebar:hover {
+        width: 20vw;
+    }
+
+    nav.sidebar:hover a {
+        transform: translateX(-100%);
+    }
+
+    nav.sidebar:hover a span {
+        opacity: 1;
+    }
+
+    nav.sidebar:hover a img {
+        transform: translateX(100%);
+    }
+
+    nav.sidebar a {
+        font-size: .8rem;
+        text-decoration: none;
+        display: flex;
+        flex-direction: row;
+        transition: .5s;
+        width: auto;
+        padding: 0;
+        border-radius: 0%;
+        position: relative;
+    }
+
+    nav.sidebar a:hover{
+        background: none;
+    }
+
+    nav.sidebar a:hover i, nav.sidebar a:hover span{
+        color: whitesmoke;
+    }
+
+    nav.sidebar a:nth-child(1) {
+        display: block;
+    }
+
+    nav.sidebar a img {
+        width: 3em;
+        transform: translateX(0);
+    }
+
+    nav.sidebar a i {
+        font-size: 1.3rem;
+        transition: .5s;
+    }
+
+    nav.sidebar a span {
+        font-size: 1.1rem;
+        position: absolute;
+        left: 100%;
+        opacity: 0;
+        transition: .5s;
+    }
+    /* Nav Sidebar End */
+
+    /* Footer Start */
+    footer {
+        display: block;
+        margin-right: 5vw;
+        font-size: .8rem;
+    }
+
+    footer div img {
+        width: 10%;
+    }
+
+    footer .social-media {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    /* Footer End */
+
 }
-
-.modal-mobile .modal-menu a {
-    color: white;
-    border: 1px solid white;
-}
-
-.modal-mobile .modal-menu a:hover {
-    background-color: black;
-    color: white;
-    border: 1px solid white;
-}
-/* Modal End */
-
-/* Nav Topbar Start */
-nav.topbar {
-    background-color: black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    padding: .8em;
-    z-index: 1;
-}
-
-nav.topbar a img {
-    width: 10%;
-}
-
-nav.topbar a {
-    color: white;
-    text-decoration: none;
-    display: none;
-}
-
-nav.topbar a:nth-child(1), nav.topbar a:nth-child(2) {
-    display: inline;
-}
-
-
-/* Nav Topbar End */
-
-/* Nav Sidebar Start */
-nav.sidebar {
-    position: absolute;
-    right: -100%;
-    width: 50vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    overflow: scroll;
-    transition: .5s;
-}
-
-nav.slide {
-    right: 0;
-}
-
-nav.sidebar a {
-    font-size: 1rem;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row-reverse;
-    align-items: center;
-    transition: .5s;
-    padding: 10%;
-    width: 40vw;
-}
-
-nav.sidebar a:hover {
-    background-color: #3e3e3e;
-}
-/* Nav Sidebar End */
 
 /* Main Jumbo Tron Start */
 main section:nth-child(1) {
@@ -169,7 +393,13 @@ main section:nth-child(1) img {
     filter: brightness(50%);
     z-index: -9999;
 }
+
+main {
+    height: 10000px;
+}
 /* Main Jumbo Tron End */
+
+
 
 /* promotion */
 .fa-promotion{
@@ -178,58 +408,4 @@ main section:nth-child(1) img {
     border: 1px solid red;
     border-radius: 50%;
     padding: 1rem;
-}
-
-@media (min-width: 992px) {
-    body {
-        overflow: hidden;
-    }
-
-    nav.topbar {
-        flex-direction: column;
-        justify-content: space-evenly;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: auto;
-        padding: 1em;
-        width: 5vw;
-        transition: 1s;
-    }
-
-    nav.topbar:hover {
-        width: 20vw;
-    }
-
-    nav.topbar:hover a span {
-        opacity: 1;
-    }
-
-    nav.topbar a:nth-child(2) {
-        display: none;
-    }
-
-    nav.topbar a {
-        position: relative;
-        display: inline;
-    }
-
-    nav.topbar a span {
-        position: absolute;
-        top: 30%;
-        margin: 0 5px;
-        opacity: 0;
-        transition: .5s;
-    }
-
-    main section:nth-child(1) img {
-        width: 95vw;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
-
-    main {
-        padding-right: 4rem;
-    }
 }
