--- a/public/asset/asset.css
+++ b/public/asset/asset.css
@@ -14,3 +14,8 @@
 .text-custom:hover .fa-brands{
     color: whitesmoke !important;
 }
+
+.card-hover:hover {
+    transform: translateY(-20px);
+    transition: .5s;
+}
