--- a/public/layout/css/style.css
+++ b/public/layout/css/style.css
@@ -646,7 +646,7 @@ table {
     }
 
     main .product-banner {
-        background-image: url('../../main/product/background.jpg');
+        background-image: url('../../main/product/background.webp');
         background-position: center;
         background-size: cover;
         color: black;
@@ -859,7 +859,7 @@ table {
     }
 
     main .comment {
-        background-image: url('../../main/comment/background.jpg');
+        background-image: url('../../main/comment/background.webp');
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
